ejs received notes

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,6 +29,8 @@
 	<!-- an ejs file is importing a variable called 'foo' inferieur%= foo %> -->
 	
 	<!-- an ejs file importing or include -->
+	<p>Received notes : <%= notes %></p>
+	
 	<p>Number of notes : <%= notes.length %></p>
 	
 	<!--  an ejs file is using javascript code -->
