--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,8 +15,7 @@
     <p>Welcome to templating using EJS</p>
 	<h2>Variable</h2>
     <p><%= tagline %></p>
-	<p>received mascot <%= mascots %></p> 
-	<p>received notes <%= notes_ %></p>
+	<p>received mascottttt <%= mascots %></p> 
 	<ul>
       <% const  ml = mascots.length;%>
 	  mascots length = <%= ml %>
