--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,21 +15,7 @@
     <p>Welcome to templating using EJS</p>
 	<h2>Variable</h2>
     <p><%= tagline %></p>
-	<p>received mascottttt <%= mascots %></p> 
-	<ul>
-      <% const  ml = mascots.length;%>
-	  mascots length = <%= ml %>
-		<% mascots.forEach(function(mascot) { %>
-        <li>
-          <strong><%= mascot.name %></strong>
-          representing <%= mascot.organization %>,
-          born <%= mascot.birth_year %>
-        </li>
-      <% }); %>
-    
-	</ul>
-	
-	
+	<p>received mascottttt <%= mascotssss %></p> 
   </div>
 </main>
 
