--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
     <p>Welcome to templating using EJS</p>
 	<ul>
         
-			<p> firstName : <%= user.firstName %></p>
+			<p> mascots : <%= mascots %></p>
 			
 	
     </ul>
