--- a/views/pages/all_notes.ejs
+++ b/views/pages/all_notes.ejs
@@ -15,7 +15,7 @@
     <p>Welcome to templating using EJS</p>
 	<ul>
         
-			<p> firstNameeee : <%= user %></p>
+			<p> Notes : <%= notes %></p>
 			
 	
     </ul>
