--- a/views/pages/all_notes.ejs
+++ b/views/pages/all_notes.ejs
@@ -15,10 +15,34 @@
     <p>Welcome to templating using EJS</p>
 	<ul>
         
-			<p> Notes : <%= notes %></p>
+			<p> Notes : <%= notes_ %></p>
 			
 	
     </ul>
+	
+	<table>   
+		<tr>
+			<th>HomeTeam</th>
+		</tr>	
+		<tr>
+            <th>id</th>
+            <th>note</th>
+            <th>trimestre</th>
+			<th>ideleves</th>
+        </tr>	
+		
+			<% for (var i = 0; i < notes_.length; i++) { %>
+				<tr>
+					<td><%= notes_[i].id %> </td>
+					<td><%= notes_[i].note %> </td>
+					<td><%= notes_[i].trimestre %> </td>
+					<td><%= notes_[i].ideleves %> </td>
+					
+				</tr>
+			<% }; %>
+    </table>
+
+	
   </div>
 </main>
 
