--- a/views/pages/all_notes.ejs
+++ b/views/pages/all_notes.ejs
@@ -15,7 +15,7 @@
     <p>Welcome to templating using EJS</p>
 	<ul>
         
-			<p> Notes : <%= notes_ %></p>
+			<p> Notes : <%= notes %></p>
 			
 	
     </ul>
@@ -33,10 +33,10 @@
 		
 			<% for (var i = 0; i < notes_.length; i++) { %>
 				<tr>
-					<td><%= notes_[i].id %> </td>
-					<td><%= notes_[i].note %> </td>
-					<td><%= notes_[i].trimestre %> </td>
-					<td><%= notes_[i].ideleves %> </td>
+					<td><%= notes[i].id %> </td>
+					<td><%= notes[i].note %> </td>
+					<td><%= notes[i].trimestre %> </td>
+					<td><%= notes[i].ideleves %> </td>
 					
 				</tr>
 			<% }; %>
