--- a/views/pages/all_notes.ejs
+++ b/views/pages/all_notes.ejs
@@ -14,8 +14,7 @@
     <h1>This is great</h1>
     <p>Welcome to templating using EJS</p>
 	<ul>
-			<p> Notes : <%= notes_ %></p>
-			<p> Notes length : <%= notes_.length %></p>
+			<p> Number of notes : <%= notes_.length %></p>
     </ul>
 	<table>   
 		<tr>
