--- a/views/pages/all_users.ejs
+++ b/views/pages/all_users.ejs
@@ -22,7 +22,8 @@
 		</tr>	
 		
 		<tr>
-            <th>id</th>
+            <th>image</th>
+			<th>id</th>
             <th>nickname</th>
             <th>imageprofile</th>
 			<th>status</th>
@@ -36,6 +37,23 @@
 		
 			<% for (var i = 0; i < users_.length; i++) { %>
 				<tr>
+					<% if(users_[i].imageprofile != null){
+							var base64Image = Buffer.from(users_[i].imageprofile).toString('base64');
+					%>
+							<td> 	<img style='display:block; width:75px;height:75px;' id='base64image'                 
+									src='data:image/jpeg;base64, <%= base64Image %> '/>
+							</td>
+					<%		
+					   }else{
+					%>
+							<td>  <img style='display:block; width:75px;height:75px;' id='avatarimage'                 
+									src='/images/avatar-profil.png'/> 
+									
+							</td>
+					<%
+					 }
+					%>
+					
 					<td><%= users_[i].id %> </td>
 					<td><%= users_[i].nickname %> </td>
 					<td><%= users_.length %> </td> <!-- users_[i].imageprofile.length -->
