--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,3 @@
-
 <meta charset="UTF-8">
 <title>EJS Is Fun</title>
 
@@ -6,4 +5,25 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <style>
   body { padding-top:50px; }
+
+      .tableFixHead {
+        overflow-y: auto; /* make the table scrollable if height is more than 400 px  */
+        height: 400px; /* gives an initial height of 400px to the table */
+      }
+      .tableFixHead thead th {
+        position: sticky; /* make the table heads sticky */
+        top: 0px; /* table head will be placed from the top of the table and sticks to it */
+      }
+      table {
+        border-collapse: collapse; /* make the table borders collapse to each other */
+        width: 100%;
+      }
+      th,
+      td {
+        padding: 8px 16px;
+        border: 1px solid #ccc;
+      }
+      th {
+        background: #eee;
+      }
 </style>
